--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.8.0",
+    "@prisma/client": "^4.5.0",
     "@replit/database": "^2.0.2",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.3",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
+  },
+  "devDependencies": {
+    "prisma": "^4.5.0"
   }
 }
